--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,14 @@ u {
   margin: 13px 8px;
 }
 
+.indicator-dot-beside-button {
+  width:8px;
+  height:8px;
+  border-radius:5px;
+  box-shadow: 0 0 8px #ea4c89, inset 0 0 12px #ea4c89;
+  margin: auto 8px;
+}
+
 .readonlyEditor textarea {
   outline: 0;
 }
